fixing lists spacing

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,8 @@ ol {
 	gap: 0.8rem;
 }
 
-ul {
-	padding-left: 1.6rem;
+.preparation ul {
+	padding-left: 2rem;
 }
 
 li::marker {
